<resources>
    <string name="app_name">InfraMov</string>

    <string-array name="arrayTipoServicio">
        <item>--Selecciona--</item>
        <item>Transporte Privado</item>
        <item>Transporte Publico</item>
    </string-array>

    <string-array name="arrayMarca">
        <item>--Selecciona--</item>
        <item>Ford Motor Company</item>
    </string-array>

    <string-array name="arraySubMarca">
        <item>--Selecciona--</item>
        <item>Mondeo 4ptas</item>
    </string-array>

    <string-array name="arrayModelo">
        <item>--Selecciona--</item>
        <item>2007</item>
    </string-array>

    <string-array name="arrayColor">
        <item>--Selecciona--</item>
        <item>Azul</item>
    </string-array>

    <string-array name="arraySangre">
        <item>--Selecciona--</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="arrayClase">
        <item>--Selecciona--</item>
        <item>A</item>
        <item>B</item>
    </string-array>

    <string-array name="arrayArticulo">
        <item>--Selecciona--</item>
        <item>ARTÍCULO 21</item>
    </string-array>

    <string-array name="arrayFraccion">
        <item>--Selecciona--</item>
        <item>III</item>
    </string-array>

    <string-array name="arrayInciso">
        <item>--Selecciona--</item>
        <item>L</item>
    </string-array>

    <string-array name="arrayApartado">
        <item>--Selecciona--</item>
        <item>A1</item>
    </string-array>

    <string-array name="arrayMunicipio">
        <item>--Selecciona--</item>
        <item>Pachuca de Soto</item>
    </string-array>

    <string-array name="arrayLocalidad">
        <item>--Selecciona--</item>
        <item>Villas de Pachuca</item>
    </string-array>



    <string name="title_activity_reglamento">Reglamento</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Infra Mov</string>
    <string name="nav_header_subtitle">Reglamento</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesión</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Términos y condiciones</string>
    <string name="menu_slideshow">Guía de uso</string>
    <string name="menu_tools">Aviso de Privacidad</string>
    <string name="menu_share">Acerca de InfraMov</string>
    <string name="menu_send">Ayuda</string>
    <string name="menu_session">Salir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
